add solution to 230

--- a/475.md
+++ b/475.md
@@ -1,9 +1,9 @@
-## Heaters ##
+## Heaters
 
-`
+```python
 def findRadius(self, houses, heaters):
 	"""
-SS	:type houses: List[int]
+	:type houses: List[int]
 	:type heaters: List[int]
 	:rtype: int
 	"""
@@ -18,4 +18,4 @@ SS	:type houses: List[int]
 		radius = min(house - heaters[i-1], heaters[i] - house)
 		result = max(radius, result)
 	return result
-`
+```
